<resources>
    <string name="app_name">Food Factory</string>
    <string name="display_products">Display Products</string>
    <string name="register_product">Register Product</string>
    <string name="availability">Availability</string>
    <string name="edit_products">Edit Products</string>
    <string name="receipes">Receipes</string>
    <string name="search">Search</string>
    <string name="register_a_new_food_ingredient">Register a new food ingredient</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="description">Description</string>

    <string name="save">save</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="welcome_to_foodfactory">Welcome to FoodFactory</string>
    <string name="available_products">Available Products</string>
    <string name="select_your_wishes">select your wishes</string>
    <string name="name_of_the_product">Name of the product</string>
    <string name="textview">TextView</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
</resources>
